# chatgpt-codex

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.json  index.js  package.json  readme  tsconfig.json
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MD5.cpp  MD5.hpp  RsaAlgo.cpp  RsaAlgo.hpp  declarations.d.ts  main.cpp  rsa.cpp
src/app/: App.tsx
src/canvas/: PlannerCanvas.tsx  canvasTransforms.ts  canvasTypes.ts  hitTesting.ts  renderClearances.tsx  renderDimensions.tsx  renderFurniture.tsx  renderGrid.tsx  renderOpenings.tsx  renderPaths.tsx  renderRoom.tsx  renderSelection.tsx
src/components/planner/: AnalysisPanel.tsx  FloatingToolbox.tsx  FurnitureLibrarySheet.tsx  RoomSettingsSheet.tsx  RoomTabs.tsx  SelectedItemSheet.tsx
src/components/ui/: AppBottomSheet.tsx  AppButton.tsx  AppCard.tsx  AppTextInput.tsx  AppToolbar.tsx  ConfirmDialog.tsx
src/domain/models/: Analysis.ts  Furniture.ts  (+5 more)
src/geometry/: clearance.ts  collision.ts  compoundShape.ts  hitTest.ts  path.ts  rect.ts
src/navigation/: RootNavigator.tsx  routes.ts
src/planner/: defaultProject.ts  furnitureLibrary.ts  roomAnalysis.ts  validation.ts
src/screens/: ExportScreen.tsx  ProjectScreen.tsx  ProjectsScreen.tsx  RoomPlannerScreen.tsx  SettingsScreen.tsx
src/storage/: imageExport.ts  importExport.ts  localStorage.ts  projectRepository.ts
src/store/: actions.ts  plannerStore.ts  selectors.ts  undoRedo.ts
src/tests/: clearance.test.ts  collision.test.ts  geometry.test.ts  hitTesting.test.ts  roomAnalysis.test.ts
src/theme/: colors.ts  shadows.ts  typography.ts
(+3 files in other folders)
